Fixed links in about and contact pages. Do not display particles on mobile devices

--- a/src/components/style/AnimBackground.css
+++ b/src/components/style/AnimBackground.css
@@ -163,6 +163,12 @@
     }
   }
 
+  @media only screen and (min-width: 200px) and (max-width: 670px) {
+    .particles {
+        display: none;
+    }
+  }
+
   
   
   
