--- a/src/components/style/Profile.css
+++ b/src/components/style/Profile.css
@@ -2,5 +2,10 @@
     height: 40vmin;
     pointer-events: none;
     border-radius: 50%;
-    margin-top: 20px;
 }
+
+@media only screen and (min-width: 200px) and (max-width: 670px) {
+    .Profile-picture {
+        margin-top: 50px;
+    }
+  }
